# poetry_monorepo_example

./: .dockerignore  .gitignore  Makefile  README.md  shell.nix
apps/app1/: pyproject.toml
apps/app1/app1/: __init__.py
libs/python/testlib1/: pyproject.toml
libs/python/testlib1/testlib1/: __init__.py
libs/python/testlib2/: pyproject.toml
libs/python/testlib2/testlib2/: __init__.py
notebooks/: pyproject.toml  test.ipynb
scripts/: run_app1.sh  run_notebook.sh
