[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Dima <dgoldin+github@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.7"

testlib1 = {path = "../libs/python/testlib1"}
testlib2 = {path = "../libs/python/testlib2"}
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = ''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

